[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reza-fastmcp"
version = "0.1.0"
description = "A FastMCP-based MCP server for text manipulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp==2.11.3",
    "youtube-transcript-api==0.6.2",
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "validators==0.22.0",
    "markdown==3.5.2",
    "pygments==2.17.2",
    "python-dotenv==1.0.1",
    "aiohttp==3.9.3",
]

[project.scripts]
reza-fastmcp = "server:main"

[tool.setuptools]
py-modules = ["server"]